# justatest

./: .gitignore  CMakeLists.txt  Makefile
.github/workflows/: ci.yml  makefile.yml
src/: CMakeLists.txt
tests/: check_executable_output.sh
